--- a/tests/пример.md
+++ b/tests/пример.md
@@ -3,35 +3,49 @@
 
 1. Там есть 2 метода, которые создают БД и таблицы в ней. И по окончанию тестов удаляют таблицы:
 
-    создание БД и таблиц ----->     def setUp(self):
-                                        self.app = app
-                                        self.app.config.update({
-                                            'SQLALCHEMY_DATABASE_URI': Config.TEST_DATABASE_URI
-                                        })
-                                        self.client = self.app.test_client()
-                                        with self.app.app_context():
-                                            db.create_all()
+    создание БД и таблиц ----->
+    
+        def setUp(self):
+            self.app = app
+            self.app.config.update({
+                'SQLALCHEMY_DATABASE_URI': Config.TEST_DATABASE_URI
+            })
+            self.client = self.app.test_client()
+            with self.app.app_context():
+                db.create_all()
 
-    удаление таблиц ----->          def tearDown(self):
-                                        with self.app.app_context():
-                                            db.session.remove()
-                                            db.drop_all()
+    удаление таблиц ----->      
+    
+        def tearDown(self):
+            with self.app.app_context():
+                db.session.remove()
+                db.drop_all()
 
     Я так понимаю, что это должно быть фикстурой формата:
 
-    @pytest.fixture
-    def init_database():
-        db.create_all()
-        yield db
-        db.drop_all()
+        @pytest.fixture
+        def init_database():
+            db.create_all()
+            yield db
+            db.drop_all()
 
     Никак не могу сообразить, как мне это сделать.
+    
+    **Ответ:**
+    
+    Тело функции *setUp* ставим перед *yield db*, оборачивая в контекст, *tearDown* ставим после *yield db*
+    
     Так же хотелось бы, что бы фикстура не создавала файл.db, а дело происходило in memory,
     чтобы не костылить с подключением к основной БД, налету меняя config.
     В тот раз мы с тобой разбирали это - conn = sqlite3.connect(":memory:")
     Но там был SQL, а не ORM.
+    
+    **Ответ:**
+    
+    Попробуй конфиг SQLALCHEMY_DATABASE_URI прописать как *sqlite:///:memory:*
 
 2. Создание user.
+
          def create_test_user1(self):
              user_data = {
                  "username": 'admin',
