--- a/tests/пример.md
+++ b/tests/пример.md
@@ -5,29 +5,35 @@
 
     создание БД и таблиц ----->
     
-        def setUp(self):
-            self.app = app
-            self.app.config.update({
-                'SQLALCHEMY_DATABASE_URI': Config.TEST_DATABASE_URI
-            })
-            self.client = self.app.test_client()
-            with self.app.app_context():
-                db.create_all()
+    ```python
+    def setUp(self):
+        self.app = app
+        self.app.config.update({
+            'SQLALCHEMY_DATABASE_URI': Config.TEST_DATABASE_URI
+        })
+        self.client = self.app.test_client()
+        with self.app.app_context():
+            db.create_all()
+    ```
 
     удаление таблиц ----->      
     
-        def tearDown(self):
-            with self.app.app_context():
-                db.session.remove()
-                db.drop_all()
+    ```python
+    def tearDown(self):
+        with self.app.app_context():
+            db.session.remove()
+            db.drop_all()
+    ```
 
     Я так понимаю, что это должно быть фикстурой формата:
 
-        @pytest.fixture
-        def init_database():
-            db.create_all()
-            yield db
-            db.drop_all()
+    ```python
+    @pytest.fixture
+    def init_database():
+        db.create_all()
+        yield db
+        db.drop_all()
+    ```
 
     Никак не могу сообразить, как мне это сделать.
     
@@ -46,19 +52,21 @@
 
 2. Создание user.
 
-         def create_test_user1(self):
-             user_data = {
-                 "username": 'admin',
-                 'password': 'admin'
-             }
+    ```python
+     def create_test_user1(self):
+         user_data = {
+             "username": 'admin',
+             'password': 'admin'
+         }
 
-             user = UserModel(**user_data)
-             user.save()
-             res = self.client.get("/users")
-             data = json.loads(res.data)
-             self.assertEqual(res.status_code, 200)
-             self.assertEqual(data[0]["username"], user_data["username"])
-             return user_data
+         user = UserModel(**user_data)
+         user.save()
+         res = self.client.get("/users")
+         data = json.loads(res.data)
+         self.assertEqual(res.status_code, 200)
+         self.assertEqual(data[0]["username"], user_data["username"])
+         return user_data
+    ```
 
    Это, я так понимаю, тоже должно быть фикстурой и в аргумент, ей должна передаваться
    фикстура создания бд и таблиц - (init_database).
