--- a/tests/пример.md
+++ b/tests/пример.md
@@ -48,24 +48,24 @@
     
     **Ответ:**
     
-    Попробуй конфиг SQLALCHEMY_DATABASE_URI прописать как *sqlite:///:memory:*
+    Попробуй конфиг *SQLALCHEMY_DATABASE_URI* прописать как *sqlite:///:memory:*.
 
 2. Создание user.
 
     ```python
-     def create_test_user1(self):
-         user_data = {
-             "username": 'admin',
-             'password': 'admin'
-         }
+    def create_test_user1(self):
+        user_data = {
+            "username": 'admin',
+            'password': 'admin'
+        }
 
-         user = UserModel(**user_data)
-         user.save()
-         res = self.client.get("/users")
-         data = json.loads(res.data)
-         self.assertEqual(res.status_code, 200)
-         self.assertEqual(data[0]["username"], user_data["username"])
-         return user_data
+        user = UserModel(**user_data)
+        user.save()
+        res = self.client.get("/users")
+        data = json.loads(res.data)
+        self.assertEqual(res.status_code, 200)
+        self.assertEqual(data[0]["username"], user_data["username"])
+        return user_data
     ```
 
    Это, я так понимаю, тоже должно быть фикстурой и в аргумент, ей должна передаваться
@@ -80,6 +80,53 @@
 
    Можешь, пожалуйста, написать, как это должно выглядеть и я уже потом, перепишу
    все вспомогательные методы на фикстуры.
+   
+   **Ответ:**
+   
+   Зависит от того, что ты хочешь сделать. Если тебе в нескольких тестах нужен предсозданный пользователь, то нужно написать авто-фикстуру, которая из названия теста, будет брать имя файла, в котором будут данные таблицы в виде json или yaml. Возможно такое сходу написать сложно. Так что рассмотрим просто решение с фикстурой.
+   
+   Где её размещать, зависит от использования, если она используется только в текущем файле, то нет смысла выносить в conftest.
+   
+    ```python
+    @pytest.fixture
+    def user_admin(init_db, client):
+        user_data = {
+            "username": 'admin',
+            'password': 'admin'
+        }
+
+        user = UserModel(**user_data)
+        user.save()
+        yield user
+    
+    def test_get_user(user_admin, client):
+        res = client.get("/users")
+        data = json.loads(res.data)
+        assert res.status_code == 200
+        assert data[0]["username"] == user_admin.username
+    ```
+    
+    Так же можно использовать параметризацию.
+    
+    
+    ```python
+    @pytest.mark.parametrize(
+        "user_data",
+        [
+            {
+                "username": 'admin',
+                'password': 'admin'
+            }
+        ]
+    )
+    def test_get_user(user_data, client):
+        user = UserModel(**user_data)
+        user.save()
+        res = client.get("/users")
+        data = json.loads(res.data)
+        assert res.status_code == 200
+        assert data[0]["username"] == user_data["username"]
+    ```
 
 
 3. Вопрос про правильное использование try except, я написал вопрос в файле resources/user, со строки 32 по 63
