--- a/tests/пример.md
+++ b/tests/пример.md
@@ -130,3 +130,7 @@
 
 
 3. Вопрос про правильное использование try except, я написал вопрос в файле resources/user, со строки 32 по 63
+    
+    **Ответ:**
+    
+    Оставляй первый вариант. Ошибка бд, это критическая ошибка. Ты должен отдавать 500 - сервер упал. Так что никак специфически на это не надо реагировать. Если ты ожидаешь ошибку и хочешь ответить 400 то подойдет второй вариант. Что касается проблемы с ифом, то попробуй *if user is None*.
